added few new links, updated coloring little bit

--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -36,6 +36,7 @@
                       </div>
                       <div class="list-group list-group-flush">
                           <a href="https://dotsandbrackets.com/" class="list-group-item list-group-item-action"><span class="badge bg-info">D</span> Dots and brackets</a>
+                          <a href="https://du-blog.ru/" class="list-group-item list-group-item-action"><span class="badge bg-dark">DU</span> One Dude</a>
                           <a href="https://kovchinnikov.info/" class="list-group-item list-group-item-action"><span class="badge bg-info">K</span> Kovchinnikov's blog</a>
                           <a href="https://www.swyx.io/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">[S]</span> Swyx</a>
                           <a href="http://sereja.me/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">S</span> Sergey Slotin</a>
@@ -43,6 +44,7 @@
                           <a href="https://vvsevolodovich.dev/" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">V</span> Vladimir Ivanov's blog</a>
                           <a href="http://danluu.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">D</span> Danluu</a>
                           <a href="https://neustadt.fr/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">P</span> Parimal Satyal</a>
+                          <a href="https://jinesh.codes/" class="list-group-item list-group-item-action"><span class="badge text-bg-success">J</span> Jinesh</a>
                       </div>
                 </div>
             </div>
@@ -67,6 +69,8 @@
                       <p class="card-text">Blogs with geek content</p>
                       </div>
                       <div class="list-group list-group-flush">
+                          <a href="https://vas3k.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">V</span> Vas3k RU</a>
+                          <a href="https://vas3k.com" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">V</span> Vas3k COM</a>
                           <a href="https://phreedom.club/~tolstoevsky/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">T</span> Tolstoevsky</a>
                           <a href="https://satyrs.eu/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">S</span> Satyr's forest</a>
                           <a href="https://adityatelange.in/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">A</span> Aditya Telange</a>
