--- a/pages/education.html
+++ b/pages/education.html
@@ -41,6 +41,7 @@
                           <a href="https://www.codewars.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">Code</span> Codewars</a>
                           <a href="https://tryhackme.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-success">Try</span> Tryhackme</a>
                           <a href="https://javarush.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-warning">Java</span> Javarush</a>
+                          <a href="https://www.khanacademy.org/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">Kh</span> Khanacademy</a>
                       </div>
                 </div>
             </div>
