--- a/pages/entertainment.html
+++ b/pages/entertainment.html
@@ -67,6 +67,7 @@
                           <a href="https://radio-t.com/" class="list-group-item list-group-item-action"><span class="badge bg-info">T</span> Radio-T</a>
                           <a href="https://beardycast.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-warning">B</span> Beardycast</a>
                           <a href="https://podcast.umputun.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">U</span> UWP</a>
+                          <a href="https://usilenie.plus/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">U</span> Usilenie</a>
                       </div>
                 </div>
             </div>
