--- a/pages/news.html
+++ b/pages/news.html
@@ -79,6 +79,7 @@
                       <p class="card-text">Some common news websites</p>
                       </div>
                       <div class="list-group list-group-flush">
+                          <a href="https://infomate.club/" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">I</span> Infomate</a>
                           <a href="https://www.onliner.by" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">O</span> Onliner.by</a>
                           <a href="https://www.zerkalo.io" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">Z</span> Zerkalo.io</a>
                       </div>
