--- a/pages/tools.html
+++ b/pages/tools.html
@@ -29,7 +29,7 @@
        <div class="row"  data-masonry='{"percentPosition": true }'>
 
             <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-light mb-3 mt-3">
+                <div class="card text-bg-dark mb-3 mt-3">
                       <div class="card-body">
                       <h5 class="card-title">&#128296; Utils</h5>
                       <p class="card-text">Util web resources</p>
@@ -40,6 +40,7 @@
                           <a href="https://notion.so/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">[N]</span> Notion</a>
                           <a href="https://jwt.io/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">J</span> JWT</a>
                           <a href="https://linkedin.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">L</span> LinkedIn</a>
+                          <a href="https://resume.io/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">R</span> ResumeIO</a>
                       </div>
                 </div>
             </div>
@@ -54,6 +55,8 @@
                           <a href="https://translate.google.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">T</span> Translate</a>
                           <a href="https://gmail.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">G</span> GMail</a>
                           <a href="https://calendar.google.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">C</span> Calendar</a>
+                          <a href="https://docs.google.com/document/u/0/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">D</span> Documents</a>
+                          <a href="https://docs.google.com/spreadsheets/u/0/" class="list-group-item list-group-item-action"><span class="badge text-bg-success">S</span> Sheets</a>
                       </div>
                 </div>
             </div>
@@ -71,7 +74,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-light mb-3 mt-3">
+                <div class="card text-bg-warning mb-3 mt-3">
                       <div class="card-body">
                       <h5 class="card-title">&#128191; Datasource</h5>
                       <p class="card-text">Data sources</p>
@@ -79,6 +82,7 @@
                       <div class="list-group list-group-flush">
                           <a href="https://mega.nz" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">M</span> Mega.nz</a>
                           <a href="http://rutracker.org/forum/index.php" class="list-group-item list-group-item-action"><span class="badge text-bg-success">Ru</span> Rutracker</a>
+                          <a href="http://flibusta.site/" class="list-group-item list-group-item-action"><span class="badge text-bg-success">F</span> Flibusta</a>
                       </div>
                 </div>
             </div>
