--- a/pages/tools.html
+++ b/pages/tools.html
@@ -13,11 +13,32 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
     <link rel="manifest" href="../img/site.webmanifest">
 
+    <script src="../content/tools.js" ></script>
+    <script src="../script/jsrender.min.js" ></script>
+
     <meta name="theme-color" content="#000000">
 </head>
 <body>
     <script src="../script/bootstrap.min.js"></script>
     <script src="../script/masonry.pkgd.min.js"></script>
+
+    <script id="tools-cards" type="text/x-jsrender">
+        {{for}}
+            <div class="col-lg-4 col-md-6">
+                <div class="card bg-{{:color}} mb-3 mt-3">
+                    <div class="card-body">
+                        <h5 class="card-title">{{:title}}</h5>
+                        <p class="card-text">{{:description}}</p>
+                    </div>
+                    <div class="list-group list-group-flush">
+                        {{for links}}
+                            <a href="{{:link}}" target="_blank" class="list-group-item list-group-item-action"><span class="badge bg-{{:badgeColor}}">{{:badgeText}}</span> {{:linkText}}</a>
+                        {{/for}}
+                    </div>
+                </div>
+            </div>
+        {{/for}}
+    </script>
 
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
@@ -26,68 +47,16 @@
     </nav>
     <div class="card-columns"></div>
     <div class="container">
-       <div class="row"  data-masonry='{"percentPosition": true }'>
-
-            <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-dark mb-3 mt-3">
-                      <div class="card-body">
-                      <h5 class="card-title">&#128296; Utils</h5>
-                      <p class="card-text">Util web resources</p>
-                      </div>
-                      <div class="list-group list-group-flush">
-                          <a href="https://github.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">Git</span> GitHub</a>
-                          <a href="https://trello.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">T</span> Trello</a>
-                          <a href="https://notion.so/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">[N]</span> Notion</a>
-                          <a href="https://jwt.io/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">J</span> JWT</a>
-                          <a href="https://linkedin.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">L</span> LinkedIn</a>
-                          <a href="https://resume.io/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">R</span> ResumeIO</a>
-                      </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-light mb-3 mt-3">
-                      <div class="card-body">
-                      <h5 class="card-title"><span class="badge text-bg-primary">G</span> Google</h5>
-                      <p class="card-text">Google web resources</p>
-                      </div>
-                      <div class="list-group list-group-flush">
-                          <a href="https://translate.google.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">T</span> Translate</a>
-                          <a href="https://gmail.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">G</span> GMail</a>
-                          <a href="https://calendar.google.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">C</span> Calendar</a>
-                          <a href="https://docs.google.com/document/u/0/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">D</span> Documents</a>
-                          <a href="https://docs.google.com/spreadsheets/u/0/" class="list-group-item list-group-item-action"><span class="badge text-bg-success">S</span> Sheets</a>
-                      </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-light mb-3 mt-3">
-                      <div class="card-body">
-                      <h5 class="card-title"><span class="badge text-bg-danger">Y</span> Yandex</h5>
-                      <p class="card-text">Yandex web resources</p>
-                      </div>
-                      <div class="list-group list-group-flush">
-                          <a href="https://yandex.ru/maps/" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">M</span> Maps</a>
-                      </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-warning mb-3 mt-3">
-                      <div class="card-body">
-                      <h5 class="card-title">&#128191; Datasource</h5>
-                      <p class="card-text">Data sources</p>
-                      </div>
-                      <div class="list-group list-group-flush">
-                          <a href="https://mega.nz" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">M</span> Mega.nz</a>
-                          <a href="http://rutracker.org/forum/index.php" class="list-group-item list-group-item-action"><span class="badge text-bg-success">Ru</span> Rutracker</a>
-                          <a href="http://flibusta.site/" class="list-group-item list-group-item-action"><span class="badge text-bg-success">F</span> Flibusta</a>
-                      </div>
-                </div>
-            </div>
-
+       <div id="cards-row" class="row" data-masonry='{"percentPosition": true }'>
        </div>
     </div>
+
+    <script>
+        var $ = window.jsrender;
+        var tmpl = $.templates("#tools-cards");
+        var html = tmpl.render(cards);
+        document.getElementById("cards-row").innerHTML = html;
+    </script>
 </body>
 </html>
+
