--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -13,11 +13,32 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
     <link rel="manifest" href="../img/site.webmanifest">
 
+    <script src="../content/blogs.js" ></script>
+    <script src="../script/jsrender.min.js" ></script>
+
     <meta name="theme-color" content="#000000">
 </head>
 <body>
     <script src="../script/bootstrap.min.js"></script>
     <script src="../script/masonry.pkgd.min.js"></script>
+
+    <script id="entertainment-cards" type="text/x-jsrender">
+        {{for}}
+            <div class="col-lg-4 col-md-6">
+                <div class="card bg-{{:color}} mb-3 mt-3">
+                    <div class="card-body">
+                        <h5 class="card-title">{{:title}}</h5>
+                        <p class="card-text">{{:description}}</p>
+                    </div>
+                    <div class="list-group list-group-flush">
+                        {{for links}}
+                            <a href="{{:link}}" target="_blank" class="list-group-item list-group-item-action"><span class="badge bg-{{:badgeColor}}">{{:badgeText}}</span> {{:linkText}}</a>
+                        {{/for}}
+                    </div>
+                </div>
+            </div>
+        {{/for}}
+    </script>
 
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
@@ -26,59 +47,14 @@
     </nav>
     <div class="card-columns"></div>
     <div class="container">
-       <div class="row"  data-masonry='{"percentPosition": true }'>
-
-            <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-secondary mb-3 mt-3">
-                      <div class="card-body">
-                      <h5 class="card-title">&#128187; It specialists</h5>
-                      <p class="card-text">it specialists blogs</p>
-                      </div>
-                      <div class="list-group list-group-flush">
-                          <a href="https://dotsandbrackets.com/" class="list-group-item list-group-item-action"><span class="badge bg-info">D</span> Dots and brackets</a>
-                          <a href="https://du-blog.ru/" class="list-group-item list-group-item-action"><span class="badge bg-dark">DU</span> One Dude</a>
-                          <a href="https://kovchinnikov.info/" class="list-group-item list-group-item-action"><span class="badge bg-info">K</span> Kovchinnikov's blog</a>
-                          <a href="https://www.swyx.io/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">[S]</span> Swyx</a>
-                          <a href="http://sereja.me/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">S</span> Sergey Slotin</a>
-                          <a href="https://cupsofcode.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-warning">C</span> Cups of code</a>
-                          <a href="https://vvsevolodovich.dev/" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">V</span> Vladimir Ivanov's blog</a>
-                          <a href="http://danluu.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">D</span> Danluu</a>
-                          <a href="https://neustadt.fr/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">P</span> Parimal Satyal</a>
-                          <a href="https://jinesh.codes/" class="list-group-item list-group-item-action"><span class="badge text-bg-success">J</span> Jinesh</a>
-                      </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-info mb-3 mt-3">
-                      <div class="card-body">
-                      <h5 class="card-title">&#127984; Artists</h5>
-                      <p class="card-text">Artists blogs</p>
-                      </div>
-                      <div class="list-group list-group-flush">
-                          <a href="https://blog.dahr.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">D</span> Dahr's blog</a>
-                          <a href="https://karanak.livejournal.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">K</span> Karanak</a>
-                      </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-light mb-3 mt-3">
-                      <div class="card-body">
-                      <h5 class="card-title">&#128190; Geek</h5>
-                      <p class="card-text">Blogs with geek content</p>
-                      </div>
-                      <div class="list-group list-group-flush">
-                          <a href="https://vas3k.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">V</span> Vas3k RU</a>
-                          <a href="https://vas3k.com" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">V</span> Vas3k COM</a>
-                          <a href="https://phreedom.club/~tolstoevsky/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">T</span> Tolstoevsky</a>
-                          <a href="https://satyrs.eu/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">S</span> Satyr's forest</a>
-                          <a href="https://adityatelange.in/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">A</span> Aditya Telange</a>
-                      </div>
-                </div>
-            </div>
-
+       <div id="cards-row" class="row" data-masonry='{"percentPosition": true }'>
        </div>
     </div>
+    <script>
+        var $ = window.jsrender;
+        var tmpl = $.templates("#entertainment-cards");
+        var html = tmpl.render(cards);
+        document.getElementById("cards-row").innerHTML = html;
+    </script>
 </body>
 </html>
