splitted bulky news section into two, added new link

--- a/pages/dev-tech-news.html
+++ b/pages/dev-tech-news.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>News</title>
+    <title>Dev & Tech</title>
 
     <link rel="stylesheet" type="text/css" href="../style/bootstrap.min.css">
 
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
     <link rel="manifest" href="../img/site.webmanifest">
 
-    <script src="../content/news.js" ></script>
+    <script src="../content/dev-tech-news.js" ></script>
     <script src="../script/jsrender.min.js" ></script>
 
     <meta name="theme-color" content="#000000">
@@ -42,7 +42,7 @@
 
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-            <a href="../index.html" class="navbar-brand mb-0 h1">News</a>
+            <a href="../index.html" class="navbar-brand mb-0 h1">Dev & Tech news</a>
         </div>
     </nav>
     <div class="card-columns"></div>
