WIP: custom css, added another test page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
     <link rel="manifest" href="./img/site.webmanifest">
 
-    <script src="./content/start_page.js" ></script>
+    <script src="./content/speed-dial.js" ></script>
     <script src="./script/jsrender.min.js" ></script>
 
     <meta name="theme-color" content="#000000">
