--- a/test.html
+++ b/test.html
@@ -13,39 +13,67 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
     <link rel="manifest" href="./img/site.webmanifest">
 
-    <script src="./content/start_page.js" ></script>
+    <script src="./content/speed-dial-new.js" ></script>
+    <script src="./content/categories.js" ></script>
     <script src="./script/jsrender.min.js" ></script>
 
     <meta name="theme-color" content="#000000">
 </head>
 <body>
-    <script id="speed-dial-cards" type="text/x-jsrender">
+    <script id="speed-dial-links" type="text/x-jsrender">
         {{for}}
             <a href="{{:link}}" class="grid-item">
-                <p><span class="badge">iM</span> {{:title}}</p>
+                <p><span class="badge backgroud-{{:badgeColor}} text-color-{{:badgeTextColor}}">{{:badgeText}}</span> {{:title}}</p>
             </a>
         {{/for}}
     </script>
 
-    <nav id="nav-bar">
-        <p>Nav text</p>
-    </nav>
+    <script id="bookmarks-categories" type="text/x-jsrender">
+        {{for}}
+            <a href="{{:link}}" class="grid-item">
+                <h3>{{:title}}</h3>
+                <p>{{:text}}</p>
+            </a>
+        {{/for}}
+    </script>
 
-    <section id="search-section">
-        <form action="https://www.google.com/search" method="get">
-            <input type="text" class="text-input" name="q"/>
-            <input type="submit" value="search" class="button"/>
-        </form>
-    </section>
+    <div class="flex-container">
+        <section class="container-header">
+            <h1>Search</h1>
+        </section>
+        <section id="search-section">
+            <form action="https://www.google.com/search" method="get">
+                <input type="text" class="text-input" name="q"/>
+                <input type="submit" value="search" class="button"/>
+            </form>
+        </section>
+    </div>
 
-    <section id="buttons-container" class="grid-container">
-    </section>
+    <div class="flex-container">
+        <section class="container-header">
+            <h1>Links</h1>
+        </section>
+        <section id="speed-dial-container" class="grid-container">
+        </section>
+    </div>
+
+    <div class="flex-container">
+        <section class="container-header">
+            <h1>Bookmarks</h1>
+        </section>
+        <section id="bookmarks-categories-container" class="grid-container">
+        </section>
+    </div>
 
     <script>
         var $ = window.jsrender;
-        var tmpl = $.templates("#speed-dial-cards");
-        var html = tmpl.render(speed_dial_links);
-        document.getElementById("buttons-container").innerHTML = html;
+        var speedDialLinks = $.templates("#speed-dial-links");
+        var speedDialLinksHtml = speedDialLinks.render(speed_dial_links);
+        document.getElementById("speed-dial-container").innerHTML = speedDialLinksHtml;
+
+        var bookmarksCategories = $.templates("#bookmarks-categories");
+        var bookmarksCategoriesHtml = bookmarksCategories.render(categories);
+        document.getElementById("bookmarks-categories-container").innerHTML = bookmarksCategoriesHtml;
     </script>
 </body>
 </html>
