--- a/pages/education.html
+++ b/pages/education.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Education</title>
+    <title>Tools</title>
 
-    <link rel="stylesheet" type="text/css" href="../style/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../style/custom.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
@@ -19,42 +19,41 @@
     <meta name="theme-color" content="#000000">
 </head>
 <body>
-    <script src="../script/bootstrap.min.js"></script>
     <script src="../script/masonry.pkgd.min.js"></script>
 
-    <script id="entertainment-cards" type="text/x-jsrender">
+    <script id="cards" type="text/x-jsrender">
         {{for}}
-            <div class="col-lg-4 col-md-6">
-                <div class="card bg-{{:color}} mb-3 mt-3">
-                    <div class="card-body">
-                        <h5 class="card-title">{{:title}}</h5>
-                        <p class="card-text">{{:description}}</p>
-                    </div>
-                    <div class="list-group list-group-flush">
-                        {{for links}}
-                            <a href="{{:link}}" target="_blank" class="list-group-item list-group-item-action"><span class="badge bg-{{:badgeColor}}">{{:badgeText}}</span> {{:linkText}}</a>
-                        {{/for}}
-                    </div>
+        <div class="card-wrapper">
+            <div class="card">
+                <div class="card-header">
+                    <h3>{{:title}}</h3>
+                </div>
+                <div class="card-body">
+                    {{for links}}
+                        <a href="{{:link}}" target="_blank">
+                            <div><span class="badge backgroud-{{:badgeColor}} text-color-{{:badgeTextColor}}">{{:badgeText}}</span> {{:linkText}}</div>
+                        </a>
+                    {{/for}}
                 </div>
             </div>
+        </div>
         {{/for}}
     </script>
 
-    <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a href="../index.html" class="navbar-brand mb-0 h1">Education</a>
-        </div>
-    </nav>
-    <div class="card-columns"></div>
-    <div class="container">
-       <div id="cards-row" class="row"  data-masonry='{"percentPosition": true }'>
-       </div>
+    <div class="flex-container">
+        <section class="container-header">
+            <a href="../index.html"><h1>Education</h1></a>
+        </section>
+        <section id="cards-container" class="cards-container" data-masonry='{"percentPosition": true }'>
+        </section>
     </div>
+
     <script>
         var $ = window.jsrender;
-        var tmpl = $.templates("#entertainment-cards");
+        var tmpl = $.templates("#cards");
         var html = tmpl.render(cards);
-        document.getElementById("cards-row").innerHTML = html;
+        document.getElementById("cards-container").innerHTML = html;
     </script>
 </body>
 </html>
+
