--- a/pages/news.html
+++ b/pages/news.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Tools</title>
+    <title>News</title>
 
     <link rel="stylesheet" type="text/css" href="../style/custom.css">
 
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
     <link rel="manifest" href="../img/site.webmanifest">
 
-    <script src="../content/other-news.js" ></script>
+    <script src="../content/news.js" ></script>
     <script src="../script/jsrender.min.js" ></script>
 
     <meta name="theme-color" content="#000000">
@@ -21,24 +21,28 @@
 <body>
     <script src="../script/masonry.pkgd.min.js"></script>
 
-    <script id="tools-cards" type="text/x-jsrender">
+    <script id="cards" type="text/x-jsrender">
         {{for}}
-            <div class="card width-part-lg-7 width-part-md-5">
+        <div class="card-wrapper">
+            <div class="card">
                 <div class="card-header">
                     <h3>{{:title}}</h3>
                 </div>
                 <div class="card-body">
                     {{for links}}
-                        <a href="{{:link}}"><div>{{:linkText}}</div></a>
+                        <a href="{{:link}}" target="_blank">
+                            <div><span class="badge backgroud-{{:badgeColor}} text-color-{{:badgeTextColor}}">{{:badgeText}}</span> {{:linkText}}</div>
+                        </a>
                     {{/for}}
                 </div>
             </div>
+        </div>
         {{/for}}
     </script>
 
     <div class="flex-container">
         <section class="container-header">
-            <a href="../test.html"><h1>News</h1></a>
+            <a href="../index.html"><h1>News</h1></a>
         </section>
         <section id="cards-container" class="cards-container" data-masonry='{"percentPosition": true }'>
         </section>
@@ -46,7 +50,7 @@
 
     <script>
         var $ = window.jsrender;
-        var tmpl = $.templates("#tools-cards");
+        var tmpl = $.templates("#cards");
         var html = tmpl.render(cards);
         document.getElementById("cards-container").innerHTML = html;
     </script>
